feat: add public popular books landing
